# couvabot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/Arduino/328P/: Blink2.ino.hex
doc/: remove files under directory.md
doc/Arduino/: Motor control.md  multi-tasking with arduino.md
doc/opencv/cross-compiling/: cross-compiling tools  cross-compiling tools.md  opencv croos-compiling  opencv croos-compiling.md
old/src/SPI/: helloArduino.c
src/: braitenberg.c
src/ArduinoSPI/: CMakeLists.txt  spiControl.ino
src/ArduinoSPI/servoSpiControl/: CMakeLists.txt  servoSpiControl.ino
src/ArduinoSPI/spiControl/: spiControl.ino
src/Arduino_couvabot/: CMakeLists.txt  couvabot.h  couvabot.ino  test_IR.ino
src/Arduino_couvabot/src/: Motor.cpp  Motor.h  ServoM.cpp  ServoM.h
src/Raspberry_couvabot/: CMakeLists.txt  main.cpp  main.h
src/Raspberry_couvabot/src/: SPICom.cpp  camera.cpp  camera.h  main.cpp  main.h  mvmtController.cpp  mvmtController.h  objTrack.cpp  robotConstants.h
src/Raspberry_couvabot/src/imageProcessing/: Blob.cpp  Blob.h  camera.cpp  camera.h  detectObjects.cpp  detectObjects.h
src/Raspberry_couvabot/src/navigation/: Trajectory.cpp  Trajectory.h  braitenberg.cpp  braitenberg.h  differentialDrive.cpp  differentialDrive.h
src/Raspberry_couvabot/src/physIface/: HeartBeat.cpp  HeartBeat.h  SPICom.cpp  SPICom.h  arduinoComm.cpp  arduinoComm.h  arduionoComm.cpp  arduionoComm.h  heartBeat.cpp  heartBeat.h  localTime.cpp  localTime.h  mvmtController.cpp  mvmtController.h  robotConstants.h
src/SPI/: helloArduino.c
src/SPI_rasp/: CMakeLists.txt  main.cpp
src/Sensors/: test_IR.ino
src/Servo/avr/: Servo.cpp
src/cmake/: ArduinoToolchain.cmake
src/cmake/Platform/: Arduino.cmake
src/couvabot/: CMakeLists.txt  main.cpp  main.h
src/couvabot/src/: Blob.cpp  Blob.h  SPICom.cpp  SPICom.h  detectObjects.cpp  detectObjects.h  mvmtController.cpp  mvmtController.h  objTrack.cpp  objTrack.h
src/motor/: motor.ino
src/servoSpiControl/: CMakeLists.txt  SpiConstants.h  servoSpiControl.h  servoSpiControl.ino
src/servoSpiControl/Servo/: Servo.cpp
src/servoSpiControl/servoSpiControl/: servoSpiControl.cpp  servoSpiControl.h
